src/components/effects/GlowingBackground.module.scss
@use "../../styles/queries";

.Orb {
  background: radial-gradient(
    circle at 50% 50%,
    rgba(0, 194, 255, 0.035) 0%,
    rgba(0, 212, 173, 0.015) 45%,
    rgba(1, 255, 157, 0) 70%
  );
  width: 35vmax;
  height: 35vmax;
}

.Container {
  position: fixed;
  overflow: hidden;
  inset: 0;
  width: 100%;
  height: 200%;
  user-select: none;
  pointer-events: none;
  opacity: 0.35;
  z-index: var(--layer-effect);
  transition: opacity 5s, top 1.5s var(--easing);

  & > * {
    position: absolute;
    width: 30vmax;
    height: 30vmax;
    transition: 30s;
    transition-property: top, left, transform;

    @media (max-width: queries.$mw-mobile) {
      width: 50vmax;
      height: 50vmax;
    }
  }
}

